--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello MehulOs Media!</title>
 </head>
 <body>
-<h1>Hello MehulOs Media!</h1>
+<h1>Its a amazing paltform</h1>
 </body>
 </html>
