--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>Hello MehulOs Media!</title>
+		<title>Hello MehulOs Media!</title>
 </head>
 <body>
-<h1>Its a amazing paltform</h1>
+<h1>Hello MehulOsMedia! It's a amazing paltform</h1>
 </body>
 </html>
