--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<title>Hello MehulOs Media!</title>
+	<title>Hello MehulOs Media!</title>
 </head>
 <body>
 <h1>Hello MehulOsMedia! It's a amazing paltform</h1>
+<h2>Hello MehulOsMedia! It's a amazing paltform</h2>
+<h3>Hello MehulOsMedia! It's a amazing paltform</h3>
+<h4>Hello MehulOsMedia! It's a amazing paltform</h4>
 </body>
 </html>
